@@ -14,7 +14,7 @@ use Imager::Test qw(is_fcolor4);
 
 -d "testout" or mkdir "testout";
 
-init_log("testout/t15color.log",1);
+Imager->open_log(log => "testout/t15color.log");
 
 my $c1 = Imager::Color->new(100, 150, 200, 250);
 ok(test_col($c1, 100, 150, 200, 250), 'simple 4-arg');
