@@ -16,7 +16,7 @@ BEGIN { use_ok('Imager') };
 
 -d "testout" or mkdir "testout";
 
-init_log("testout/t36oofont.log", 1);
+Imager->open_log(log => "testout/t36oofont.log");
 
 my $fontname_tt=$ENV{'TTFONTTEST'}||'./fontfiles/dodge.ttf';
 
